# yew-pr-2705-regression

./: Cargo.toml  README.md  index.html
src/: main.rs
