[package]
name = "yew-issue-2705"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = { version = "0.7.0", features = ["futures"] }
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"

# Switch to master and should fix the crash.
# yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
yew = { git = "https://github.com/worldsender/yew", rev = "ac4cc16", features = ["csr"] }
